<resources>
    <string name="app_name">Define</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_category">Category</string>

    <string name="title_section1">Subcategories</string>
    <string name="title_section2">Newest</string>
    <string name="title_section3">Sales</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_purchases">My Purchases</string>

    <!-- Our -->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_category">Categories</string>
    <string name="category_woman">Women</string>
    <string name="category_men">Men</string>
    <string name="category_girls">Girls</string>
    <string name="category_boys">Boys</string>
    <string name="category_babies">Babies</string>

    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_purchases">My Purchases</string>
    <string name="title_home">Home</string>
    <string name="title_misc">Miscellaneous</string>

    <string name="title_sales">On sale</string>
    <string name="title_new">New</string>
    <string name="title_subcategories">Subcategories</string>
    <string name="title_login">Login</string>
    <string name="notification_text">Purchases have changed</string>
    <string name="more">MORE</string>
    <string name="account_name">Name:</string>
    <string name="account_lastname">Last Name:</string>
    <string name="account_sex">Sex</string>
    <string name="account_ident">Identity</string>
    <string name="account_email">Email</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="purchases_updated">Purchases list updated</string>
    <string name="settings_notifications_enable">Enable Notifications</string>
    <string name="notification_interval_title">Update interval</string>
    <string name="notification_interval_summary">%s</string>
    <string name="error_img"> An error has occurred while downloading products </string>
    <string name="error_connection"> Connection error </string>
    <string name="search_title">search</string>
    <string name="hint_search_bar">Search for a product…</string>
    <string name="title_activity_purchase"> Product Name </string>
    <string name="purchase_title">Purchase #%d</string>
    <string name="product_title_summary">Information</string>
    <string name="product_name_label">Name:</string>
    <string name="product_brand_label">Brand:</string>
    <string name="product_title_colors">Colors</string>
    <string name="product_title_sizes">Sizes</string>
    <string name="product_details_label">Materials:</string>
    <string name="my_account">My Account</string>
    <string name="title_search">Search</string>
    <string name="orderstatus_transported">Transported</string>
    <string name="orderstatus_delivered">Delivered</string>
    <string name="orderstatus_confirmed">Confirmed</string>
    <string name="logout">Log out</string>
    <string name="loggingout">Logging out</string>
    <string name="login_header">Login</string>
    <string name="purchase_summary">Summary</string>
    <string name="purchase_total">Total:</string>
    <string name="purchase_status">Status:</string>
    <string name="purchase_address">Address</string>
    <string name="purchase_phone">Phone:</string>
    <string name="purchase_paymethod">Payment Method</string>
    <string name="purchase_cc">Credit Card:</string>
    <string name="purchase_exp">Expiration:</string>
    <string name="error_conection">Connection error</string>
    <string name="product_title_details">Details</string>
    <string name="interval_15_min">Every 15 minute</string>
    <string name="interval_30_min">Every 30 minutes</string>
    <string name="interval_1_hour">Every 1 hour</string>
    <string name="interval_12_hour">Every 12 hours</string>
    <string name="interval_24_hour">Every 24 hours</string>
    <string name="product_novedad">New</string>
    <string name="product_sale">On Sale</string>
</resources>
